QA-12660 : fix z-index to display the category edit engine (#442)

--- a/war/src/main/webapp/engines/jahia-anthracite/css/app/pickers/_all.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/css/app/pickers/_all.scss
@@ -16,7 +16,7 @@
     }
 
     background: linear-gradient(to bottom, #dbdbdb 1%, #d5d5d5 100%);
-    z-index: 1100 !important;
+    z-index: 1030 !important;
 
     .indigo-modal-mask {
         display: none;
